err/pylinkvalidator.err
Listing '.'...
Listing './bin'...
Compiling './bin/pylinkvalidate.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pylinkvalidator'...
Listing './lib/python3.5/site-packages/pylinkvalidator/bs4'...
Listing './lib/python3.5/site-packages/pylinkvalidator/bs4/builder'...
Compiling './lib/python3.5/site-packages/pylinkvalidator/bs4/builder/_htmlparser.py'...
***   File "./lib/python3.5/site-packages/pylinkvalidator/bs4/builder/_htmlparser.py", line 71
    except (ValueError, OverflowError), e:
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pylinkvalidator/bs4/diagnose.py'...
***   File "./lib/python3.5/site-packages/pylinkvalidator/bs4/diagnose.py", line 20
    print "Diagnostic running on Beautiful Soup %s" % __version__
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pylinkvalidator/bs4/element.py'...
***   File "./lib/python3.5/site-packages/pylinkvalidator/bs4/element.py", line 1204
    print 'Running CSS selector "%s"' % selector
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pylinkvalidator-0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
